--- a/style.css
+++ b/style.css
@@ -88,13 +88,42 @@ body {
 
 } */
 
+.btn-container {
+    margin-bottom: 4rem;
+    display: flex;
+    justify-content: center;
+}
+
+.filter-btn {
+    background: transparent;
+    border-color: #c59d5f;
+    font-size: 1rem;
+    text-transform: capitalize;
+    margin: 0 0.5rem;
+    letter-spacing: 1px;
+    border-radius: 0.5rem;
+    padding: 0.375rem 0.75rem;
+    color: #c59d5f;
+    cursor: pointer;
+    transition: all 0.3s linear;
+    ;
+}
+
+.filter-btn:hover {
+    background: #c59d5f;
+    color: #fff;
+}
+
 .section-center {
-    width: 90vw;
-    margin: 0 auto;
-    max-width: 1170px;
     display: grid;
-    gap: 3rem 2rem;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(4, 1fr);
+    margin: 0 auto;
     justify-items: center;
+    gap: 3rem 2rem;
+    max-width: 1170px;
+    width: 90vw;
+
 }
 
 .menu-item {
